# noisy_fit_2d

./: CMakeLists.txt  README.md  main.cpp
includes/: CMakeLists.txt  arguments_parser.h  matplotlibcpp.h
linear_fitting/: CMakeLists.txt  linear_fitting.cpp  linear_fitting.h  linear_fitting_factory.cpp  test.cpp
linear_fitting/solvers/: least_squares.h  linear_fitting_base.h
random_noise_generator/: CMakeLists.txt  random_noise_factory.cpp  random_noise_generator.cpp  random_noise_generator.h
random_noise_generator/noises/: linear.h  quadratic.h  random_noise_base.h  simplified_cholesky.h
